--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,7 @@
   transition-duration: 100ms;
   transform: scale(.9);
 }
+
+.heading {
+  @apply w-full pb-2 text-2xl font-bold uppercase border-b-2 md:w-max text-sky-900 border-stone-200 font-merriwether
+}
